# rules_xcodeproj

./: .bazelignore  .bazelrc  .bazelversion  .gitattributes  .gitignore  .pre-commit-config.yaml  .swiftformat  .swiftlint.yml  BUILD  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTENANCE.md  MODULE.bazel  Package.resolved  Package.swift  README.md  WORKSPACE  __init__.py  bazel_5.bazelrc  bazel_6.bazelrc  bazel_7.bazelrc  bazel_8.bazelrc  bazel_9.bazelrc  bazel_versions.bzl  bep  buildbuddy.yaml  ci.yaml  platform_mappings  platform_mappings-bzlmod  shared.bazelrc  swiftformat  swiftlint  xcodeproj.bazelrc
docs/: BUILD  BUILD.bazel  README.md  bazel.md  compile-commands-design-goals.md  design-goals.md  faq.md  rules-xcodeproj.md  update_docs.sh  usage.md
docs/SwiftUIPreviewInvestigation/: README.md  project.yml
docs/SwiftUIPreviewInvestigation/Stubs/: clang_shim.sh  ld  swiftc
docs/SwiftUIPreviewInvestigation/app/: Debug.entitlements  Info.plist
docs/design/: README.md  custom-xcode-schemes.md  high-level.md
docs/swift-build/: debugging-swift-build-locally.md
examples/cc/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  xcodeproj_targets.bzl
examples/cc/lib/: BUILD  lib.c  lib.h  private.h
examples/cc/lib2/: BUILD  lib.c  lib.h
examples/cc/lib3/: BUILD
examples/cc/tool/: BUILD  main.c
examples/integration/: .bazelignore  .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  bazel_6.bazelrc  platform_mappings  platform_mappings-bzlmod  platform_mappings-bzlmod_no_repo_map  platform_mappings-nobzlmod  platform_mappings-non-bzlmod  repositories.bzl  xcodeproj.bazelrc  xcodeproj_targets.bzl
examples/integration/AppClip/: AppClip.swift  BUILD
examples/integration/Bundle/: BUILD
examples/integration/ExtensionKitExtension/: BUILD  Info.plist  main.swift
examples/integration/GRPC/: BUILD  client_main.swift  echo.proto  server_main.swift
examples/integration/Lib/: BUILD  README.md  Resources.swift
examples/integration/MixedLib/: BUILD  MixedObjC.h  MixedObjC.m  MixedSwift.swift
examples/integration/Proto/: BUILD  Info.plist  Person.proto  main.swift
examples/integration/Stringify/: BUILD  Stringify.swift  StringifyMacro.swift  StringifyMacroPlugin.swift  StringifyMacroTests.swift
examples/integration/Tool/: BUILD
examples/integration/UI/: BUILD  ContentView.swift  UI.h
examples/integration/WidgetExtension/: BUILD  Info.plist  WidgetExtension.swift
examples/integration/iMessageApp/: BUILD  Info.extension.plist  MessagesViewController.swift
examples/integration/iOSApp/: BUILD  info.yaml  ownership.yaml
examples/integration/tools/: bazel
examples/integration/tvOSApp/: BUILD
examples/integration/watchOSApp/: BUILD
examples/integration/watchOSAppExtension/: BUILD  ContentView.swift  Info.plist  watchOSApp.swift
examples/rules_ios/: .bazelignore  .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  bazel_6.bazelrc  platform_mappings  repositories.bzl  xcodeproj.bazelrc  xcodeproj_targets.bzl
examples/rules_ios/Lib/: BUILD
examples/rules_ios/LibTwo/: BUILD.bazel
examples/rules_ios/UI/: BUILD  ContentView.swift
examples/rules_ios/WidgetExtension/: BUILD
examples/rules_ios/iOSApp/: BUILD  iOSApp.podspec
examples/rules_ios/repository_rules/: repo_rule_1.bzl  repo_rule_2.bzl
examples/rules_ios/tools/: bazel
examples/sanitizers/: .bazelrc  .gitignore  BUILD  MODULE.bazel  WORKSPACE  xcodeproj_targets.bzl
examples/sanitizers/AddressSanitizerApp/: AddressSanitizerExamples.swift  BUILD  ContentView.swift
examples/sanitizers/ThreadSanitizerApp/: BUILD  ContentView.swift  ThreadSanitizerApp.swift  ThreadSanitizerExamples.swift
examples/sanitizers/UndefinedBehaviorSanitizerApp/: BUILD  Info.plist
examples/sanitizers/tools/: bazel
examples/temp/: BUILD.bazel
examples/temp/Sources/: A.swift  B.swift
examples/temp/Tests/: Test.swift
test/internal/flattened_key_values/: BUILD  BUILD.bazel  flattened_key_values_tests.bzl
test/internal/targets/: BUILD  BUILD.bazel  is_test_bundle_tests.bzl  should_become_xcode_target_tests.bzl
xcodeproj/internal/: BUILD  app_icons.bzl  automatic_target_info.bzl  bazel_build.template.sh  bazel_labels.bzl  build_settings.bzl  collections.bzl  compilation_providers.bzl  compiler_args.bzl  configuration.bzl  create_xcode_overlay.template.sh  custom_toolchain.bzl  default_automatic_target_processing_aspect.bzl  default_input_file_attributes_aspect.bzl  dependencies.bzl  device_and_simulator.bzl  device_and_simulator_macro.bzl  device_and_simulator_rule.bzl  entitlements.bzl  execution_root.bzl  extension_point_identifiers.bzl  extra_flags_bazelrc.bzl  filelists.bzl  files.bzl  fixtures.bzl  flattened_key_values.bzl  frozen_constants.bzl  generator.BUILD.template.bazel  generator.defs.template.bzl  incremental_xcode_targets.bzl  incremental_xcodeprojinfos.bzl  indexstore_filelists.bzl  info_plists.bzl  input_files.bzl  input_files_aspect.bzl  installer.template.sh  launchd_plists.bzl  legacy_processed_targets.bzl  legacy_target_properties.bzl  legacy_xcode_targets.bzl  (+61 more)
xcodeproj/internal/bazel_integration_files/: BUILD  actions.bzl  bazel_build.sh  bazel_generate_files.sh  calculate_output_groups.py  cc.sh  clang.sh  copy_dsyms.sh  copy_outputs.sh  create_lldbinit.sh  generate_bazel_dependencies.sh  generate_index_build_bazel_dependencies.sh  import_indexstores.sh  ld  ld.sh  libtool.sh  main.swift  process_bazel_build_log.py  swiftc.cc  swiftc.py  swiftc.swift
xcodeproj/internal/cat/: BUILD  automatic_target_info.bzl  compilation_providers.bzl  files.bzl  input_files.bzl  library_targets.bzl  linker_input_files.bzl  opts.bzl  output_files.bzl  pbxproj_partials.bzl  platforms.bzl  processed_target.bzl  product.bzl  providers.bzl  provisioning_profiles.bzl  resources.bzl  target_properties.bzl  top_level_targets.bzl  unsupported_targets.bzl  xcode_targets.bzl  xcodeproj_aspect.bzl  xcodeproj_rule.bzl  xcodeprojinfo.bzl
xcodeproj/internal/docs/: BUILD  aspect_hints.bzl  bazel.header.md  project_options.bzl  providers.bzl  top_level_target.bzl  (+4 more)
(+3277 files in other folders)
