module(
    name = "rules_xcodeproj",
    version = "1.3.0",
    compatibility_level = 1,
    repo_name = "rules_xcodeproj",
)

bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(
    name = "rules_swift",
    version = "1.6.0",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(
    name = "rules_apple",
    version = "2.0.0",
    repo_name = "build_bazel_rules_apple",
)
bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.0.0.1",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_pkg",
    version = "0.7.0",
    dev_dependency = True,
)

non_module_deps = use_extension("//xcodeproj:extensions.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "com_github_apple_swift_collections",
    "com_github_kylef_pathkit",
    "com_github_michaeleisel_jjliso8601dateformatter",
    "com_github_michaeleisel_zippyjson",
    "com_github_michaeleisel_zippyjsoncfamily",
    "com_github_tadija_aexml",
    "com_github_tuist_xcodeproj",
    "rules_xcodeproj_index_import",
)

dev_non_module_deps = use_extension(
    "//xcodeproj:extensions.bzl",
    "dev_non_module_deps",
    dev_dependency = True,
)
use_repo(
    dev_non_module_deps,
    "com_github_pointfreeco_swift_custom_dump",
    "com_github_pointfreeco_xctest_dynamic_overlay",
)
