module(
    name = "rules_xcodeproj",
    version = "0.0.0",
    bazel_compatibility = [">=6.3.0"],
    compatibility_level = 1,
    repo_name = "rules_xcodeproj",
)

bazel_dep(name = "bazel_features", version = "1.3.0")
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(
    name = "rules_swift",
    version = "1.18.0",
    max_compatibility_level = 2,
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(
    name = "rules_apple",
    version = "3.6.0",
    repo_name = "build_bazel_rules_apple",
)
bazel_dep(name = "rules_python", version = "0.27.1")

internal = use_extension("//xcodeproj:extensions.bzl", "internal")
use_repo(internal, "rules_xcodeproj_generated")

non_module_deps = use_extension("//xcodeproj:extensions.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "rules_xcodeproj_index_import",
)

# Non-release dependencies

bazel_dep(
    name = "apple_support",
    version = "1.11.1",
    dev_dependency = True,
    repo_name = "build_bazel_apple_support",
)
bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.3.3",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_pkg",
    version = "0.9.1",
    dev_dependency = True,
)
bazel_dep(
    name = "stardoc",
    version = "0.6.1",
    dev_dependency = True,
    repo_name = "io_bazel_stardoc",
)

# To support Bazel 8 tests
single_version_override(
    module_name = "rules_apple",
    version = "3.5.1",
)

single_version_override(
    module_name = "rules_swift",
    version = "1.18.0",
)

single_version_override(
    module_name = "apple_support",
    version = "1.15.1",
)

# For Stardoc
single_version_override(
    module_name = "bazel_skylib",
    version = "1.6.0",
)

apple_cc_configure = use_extension(
    "@build_bazel_apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
    dev_dependency = True,
)
use_repo(apple_cc_configure, "local_config_apple_cc")

use_repo(
    non_module_deps,
    "com_github_apple_swift_argument_parser",
    "com_github_apple_swift_collections",
    "com_github_kylef_pathkit",
    "com_github_michaeleisel_jjliso8601dateformatter",
    "com_github_michaeleisel_zippyjson",
    "com_github_michaeleisel_zippyjsoncfamily",
    "com_github_tadija_aexml",
    "com_github_tuist_xcodeproj",
)

dev_non_module_deps = use_extension(
    "//xcodeproj:dev_extensions.bzl",
    "dev_non_module_deps",
    dev_dependency = True,
)
use_repo(
    dev_non_module_deps,
    "com_github_pointfreeco_swift_custom_dump",
    "com_github_pointfreeco_xctest_dynamic_overlay",
)
