module(
    name = "rules_xcodeproj",
    version = "0.0.0",
    bazel_compatibility = [">=8.0.0"],
    compatibility_level = 1,
    repo_name = "rules_xcodeproj",
)

bazel_dep(
    name = "apple_support",
    version = "2.2.0",
    repo_name = "build_bazel_apple_support",
)
bazel_dep(name = "bazel_features", version = "1.42.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(
    name = "rules_swift",
    version = "3.5.0",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(
    name = "rules_apple",
    version = "4.4.0",
    repo_name = "build_bazel_rules_apple",
)
bazel_dep(name = "rules_python", version = "1.7.0")

repos = use_extension("//xcodeproj:extensions.bzl", "rules_repos")
use_repo(
    repos,
    "com_github_apple_swift_argument_parser",
    "com_github_apple_swift_collections",
    "com_github_michaeleisel_jjliso8601dateformatter",
    "com_github_michaeleisel_zippyjson",
    "com_github_michaeleisel_zippyjsoncfamily",
    "rules_xcodeproj_generated",
    "rules_xcodeproj_index_import",
    "rules_xcodeproj_legacy_index_import",
)

# Non-release dependencies

bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.3.3",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_pkg",
    version = "1.0.1",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_shell",
    version = "0.6.1",
    dev_dependency = True,
)
bazel_dep(
    name = "stardoc",
    version = "0.8.0",
    dev_dependency = True,
    repo_name = "io_bazel_stardoc",
)

apple_cc_configure = use_extension(
    "@build_bazel_apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
    dev_dependency = True,
)
use_repo(apple_cc_configure, "local_config_apple_cc")

dev_repos = use_extension("//xcodeproj:extensions.bzl", "rules_dev_repos", dev_dependency = True)
use_repo(
    dev_repos,
    "com_github_pointfreeco_swift_custom_dump",
    "com_github_pointfreeco_xctest_dynamic_overlay",
)
