bazel_dep(
    name = "rules_xcodeproj",
    version = "0.0.0",
)
bazel_dep(
    name = "rules_apple",
    version = "2.1.0",
    repo_name = "build_bazel_rules_apple",
)
bazel_dep(
    name = "rules_swift",
    version = "1.6.0",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(
    name = "examples_cc_external",
    version = "0.0.1",
)

local_path_override(
    module_name = "rules_xcodeproj",
    path = "../..",
)

local_path_override(
    module_name = "examples_cc_external",
    path = "external",
)
