bazel_dep(
    name = "apple_support",
    version = "1.8.1",
    repo_name = "build_bazel_apple_support",
)
bazel_dep(
    name = "rules_xcodeproj",
    version = "0.0.0",
)
bazel_dep(
    name = "rules_apple",
    version = "2.4.1",
    repo_name = "build_bazel_rules_apple",
)
bazel_dep(
    name = "rules_swift",
    version = "1.9.1",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(
    name = "examples_cc_external",
    version = "0.0.1",
)

bazel_dep(name = "bazel_features", version = "1.0.0", dev_dependency = True)

local_path_override(
    module_name = "rules_xcodeproj",
    path = "../..",
)

local_path_override(
    module_name = "examples_cc_external",
    path = "external",
)

apple_cc_configure = use_extension(
    "@build_bazel_apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
    dev_dependency = True,
)
use_repo(apple_cc_configure, "local_config_apple_cc")
