bazel_dep(
    name = "rules_xcodeproj",
    version = "0.0.0",
)
bazel_dep(
    name = "apple_support",
    version = "1.4.1",
    repo_name = "build_bazel_apple_support",
)
bazel_dep(
    name = "rules_apple",
    version = "2.1.0",
    repo_name = "build_bazel_rules_apple",
)
bazel_dep(
    name = "rules_swift",
    version = "1.6.0",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(
    name = "rules_apple_linker",
    version = "0.3.0",
)
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(
    name = "examples_ios_app_external",
    version = "0.0.1",
)

local_path_override(
    module_name = "rules_xcodeproj",
    path = "../..",
)

local_path_override(
    module_name = "examples_ios_app_external",
    path = "iOSApp/external",
)

non_module_deps = use_extension(":repositories.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "FXPageControl",
    "com_github_krzyzanowskim_cryptoswift",
    "com_google_google_maps",
)

# TODO: Remove once this is in the BCR
archive_override(
    module_name = "swiftlint",
    integrity = "sha256-++aCSWCuZYy0MoAgUPYv2rJDpUx54A4uDbB2hqGHPVk=",
    strip_prefix = "SwiftLint-084ad9dfd4f8deec1c3ee02b18baf5f5dd746ea8",
    urls = [
        "https://github.com/realm/SwiftLint/archive/084ad9dfd4f8deec1c3ee02b18baf5f5dd746ea8.tar.gz",
    ],
)

bazel_dep(name = "swiftlint", version = "0.50.3", repo_name = "SwiftLint")
