bazel_dep(
    name = "rules_xcodeproj",
    # Set to the real version with `--override_module`
    version = "0.0.0",
)
bazel_dep(
    name = "apple_support",
    version = "1.9.0",
    repo_name = "build_bazel_apple_support",
)
bazel_dep(
    name = "rules_apple",
    version = "3.0.0-rc2",
    repo_name = "build_bazel_rules_apple",
)
bazel_dep(
    name = "rules_swift",
    version = "1.11.0",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(
    name = "examples_cc_external",
    version = "0.0.1",
)
bazel_dep(
    name = "examples_ios_app_external",
    version = "0.0.1",
)

bazel_dep(name = "bazel_features", version = "1.0.0", dev_dependency = True)

local_path_override(
    module_name = "examples_cc_external",
    path = "cc/external",
)

local_path_override(
    module_name = "examples_ios_app_external",
    path = "iOSApp/external",
)

apple_cc_configure = use_extension(
    "@build_bazel_apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(
    apple_cc_configure,
    "local_config_apple_cc",
    "local_config_apple_cc_toolchains",
)

# TODO: Remove manual register once https://github.com/bazelbuild/rules_cc/commit/c8c38f8c710cbbf834283e4777916b68261b359c is released
register_toolchains("@local_config_apple_cc_toolchains//:all")

non_module_deps = use_extension(":repositories.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "FXPageControl",
    "com_github_krzyzanowskim_cryptoswift",
    "com_google_google_maps",
)
