bazel_dep(
    name = "rules_xcodeproj",
    # Set to the real version with `--override_module`
    version = "0.0.0",
)
bazel_dep(
    name = "apple_support",
    version = "1.21.0",
    repo_name = "build_bazel_apple_support",
)
bazel_dep(
    name = "rules_apple",
    version = "4.0.1",
    repo_name = "build_bazel_rules_apple",
)
bazel_dep(
    name = "rules_swift",
    version = "3.0.2",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "protobuf", version = "29.0")
bazel_dep(name = "rules_shell", version = "0.5.0")
bazel_dep(
    name = "examples_cc_external",
    version = "0.0.1",
)
bazel_dep(
    name = "examples_ios_app_external",
    version = "0.0.1",
)

bazel_dep(name = "bazel_features", version = "1.1.1", dev_dependency = True)

local_path_override(
    module_name = "examples_cc_external",
    path = "cc/external",
)

local_path_override(
    module_name = "examples_ios_app_external",
    path = "iOSApp/external",
)

apple_cc_configure = use_extension(
    "@build_bazel_apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(
    apple_cc_configure,
    "local_config_apple_cc",
    "local_config_apple_cc_toolchains",
)

non_module_deps = use_extension(":repositories.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "FXPageControl",
    "com_github_krzyzanowskim_cryptoswift",
    "com_google_google_maps",
)

new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

new_local_repository(
    name = "examples_command_line_external",
    build_file = "//CommandLine/external:BUILD.tpl",
    path = "CommandLine/external",
)
