bazel_dep(
    name = "rules_xcodeproj",
    version = "0.0.0",
)
bazel_dep(
    name = "apple_support",
    version = "1.5.0",
    repo_name = "build_bazel_apple_support",
)
bazel_dep(
    name = "rules_apple",
    version = "2.1.0",
    repo_name = "build_bazel_rules_apple",
)
bazel_dep(
    name = "rules_swift",
    version = "1.7.1",
    repo_name = "build_bazel_rules_swift",
)

# bazel_dep(
#     name = "rules_apple_linker",
#     version = "0.3.0",
# )
bazel_dep(name = "rules_cc", version = "0.0.6")
bazel_dep(name = "rules_python", version = "0.20.0")
bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(
    name = "examples_ios_app_external",
    version = "0.0.1",
)

local_path_override(
    module_name = "rules_xcodeproj",
    path = "../..",
)

local_path_override(
    module_name = "examples_ios_app_external",
    path = "iOSApp/external",
)

non_module_deps = use_extension(":repositories.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    # "build_bazel_rules_apple",
    "FXPageControl",
    "arm64-to-sim",
    "build_bazel_rules_ios",
    "com_github_krzyzanowskim_cryptoswift",
    "com_google_google_maps",
    "xctestrunner",
)
