bazel_dep(
    name = "rules_xcodeproj",
    # Set to the real version with `--override_module`
    version = "0.0.0",
)
bazel_dep(
    name = "apple_support",
    version = "1.21.0",
    repo_name = "build_bazel_apple_support",
)
bazel_dep(
    name = "rules_apple",
    version = "3.16.1",
    repo_name = "build_bazel_rules_apple",
)
bazel_dep(
    name = "rules_swift",
    version = "2.0.0",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(
    name = "rules_ios",
    version = "5.6.0",
    repo_name = "build_bazel_rules_ios",
)

apple_cc_configure = use_extension(
    "@build_bazel_apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(
    apple_cc_configure,
    "local_config_apple_cc",
    "local_config_apple_cc_toolchains",
)
