bazel_dep(
    name = "rules_xcodeproj",
    # Set to the real version with `--override_module`
    version = "0.0.0",
)
bazel_dep(
    name = "apple_support",
    version = "2.2.0",
    repo_name = "build_bazel_apple_support",
)
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(
    name = "rules_apple",
    version = "4.4.0",
    repo_name = "build_bazel_rules_apple",
)
bazel_dep(
    name = "rules_swift",
    version = "3.5.0",
    repo_name = "build_bazel_rules_swift",
)

bazel_dep(name = "bazel_features", version = "1.36.0", dev_dependency = True)
