load(
    ":defs.bzl",
    "BAZEL_ENV",
    "BAZEL_PATH",
    "WORKSPACE_DIRECTORY",
    "xcodeproj",
)

# DO NOT INVOKE THIS TARGET YOURSELF.
#
# This target is generated and invoked by `xcodeproj_runner`.
xcodeproj(
    name = "%name%",
    testonly = %testonly%,
    bazel_env = BAZEL_ENV,
    bazel_path = BAZEL_PATH,
    colorize = %colorize%,
    config = "%config%",
    default_xcode_configuration = %default_xcode_configuration%,
    generation_shard_count = %generation_shard_count%,
    import_index_build_indexstores = %import_index_build_indexstores%,
    install_path = "%install_path%",
    ios_device_cpus = "%ios_device_cpus%",
    ios_simulator_cpus = "%ios_simulator_cpus%",
    minimum_xcode_version = "%minimum_xcode_version%",
    owned_extra_files = %owned_extra_files%,
    post_build = """%post_build%""",
    pre_build = """%pre_build%""",
    project_options = %project_options%,
    runner_build_file = "%runner_build_file%",
    runner_label = "%runner_label%",
    scheme_autogeneration_mode = "%scheme_autogeneration_mode%",
    scheme_autogeneration_config = %scheme_autogeneration_config%,
    tags = %tags%,
    target_name_mode = "%target_name_mode%",
    top_level_device_targets = %top_level_device_targets%,
    top_level_simulator_targets = %top_level_simulator_targets%,
    tvos_device_cpus = "%tvos_device_cpus%",
    tvos_simulator_cpus = "%tvos_simulator_cpus%",
    unowned_extra_files = %unowned_extra_files%,
    visibility = ["%visibility%"],
    visionos_device_cpus = "%visionos_device_cpus%",
    visionos_simulator_cpus = "%visionos_simulator_cpus%",
    watchos_device_cpus = "%watchos_device_cpus%",
    watchos_simulator_cpus = "%watchos_simulator_cpus%",
    workspace_directory = WORKSPACE_DIRECTORY,
    xcode_configuration_map = %xcode_configuration_map%,
    xcschemes_json = """%xcschemes_json%""",
)
